# valrip

./: .gitignore  README.md  deploy.sh  pyproject.toml  requirements.txt  valrip.spec
.github/workflows/: build-all.yml
rip_validator/: WAVES_config.py  __init__.py  auto_version.py  cli.py  cli.spec  cli_both.py  cli_consistent.py  cli_directory.py  cli_generate.py  cli_maml.py  cli_parquet.py  cli_submit.py  column_name_validator.py  config.py  daml.py  data_and_metadata_validator.py  data_types.py  data_validator.py  filter_check.py  helper_validator_methods.py  internet_checker.py  make_maml.py  maml.py  metadata_generator.py  metadata_validator.py  model_daml.py  model_waves_maml.py  owncloud_utils.py  report.py  rip_level_validator.py  settings_config.py  status.py  store_credentials.py  submit.py  ucd_validator.py  validate.py  version_control.py  yaml_convience_functions.py  yaml_errors.py
rip_validator/extdata/: exceptions.yaml  filters.yaml  protected_words.yaml  ucd_rules.yaml
rip_validator/schemas/: daml_schema_v1p0.json  waves_maml_schema_v1p0.json
